@@ -1,5 +1,9 @@
 2020-04-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/effect.c (AdaptiveThresholdImage): Assure that we don't
+	attempt to write to output pixels if they have not been selected
+	yet.
+
 	* magick/utility.c (ExpandFilenames): Properly handle NULL
 	filelist and NULL filelist entries.
 	(GetGeometry): Assure that there is no one-character stack read
